<resources>
    <string name="app_name">AndroidView2</string>
    <string name="savedata">Save Data</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="deletedata">Delete Data</string>
    <string name="updatedata">Update Data</string>
    <string name="savedateobject">Save Date Object</string>
    <string name="nestedobject">Nested Object</string>
    <string name="livedataandviewmodel">LiveData And ViewModel</string>
    <string name="callback">Callback</string>
    <string name="pagination">Pagination</string>
    <string name="auth">Auth</string>
    <string name="checkdata">Check Data</string>
    <string name="singledata">Single Data</string>
    <string name="limitdata">Limit Data</string>
    <string name="populatedata">Populate Data</string>
    <string name="spinner">Spinner</string>
    <string name="multplequeries">Multiple Queries</string>
    <string name="orderby">OrderBy</string>
    <string name="batch">Batch</string>
    <string name="deletemutiple">Delete Mutiple</string>
    <string name="chain">Chain</string>
    <string name="savedocument">Save Document</string>
    <string name="deletedocument">Delete Document</string>
    <string name="updatedocument">Update Document</string>
    <string name="offlinecache">Offline Cache</string>
    <string name="dateobject">Date Object</string>
    <string name="nextedobject">Nexted Object</string>
    <string name="checkdocument">Check Document</string>
    <string name="singledocument">Single Document</string>
    <string name="limitdocument">Limit Document</string>
    <string name="populatedocument">Populate Document</string>
    <string name="dexmerger">Dex Merger</string>
    <string name="filterchip">Filter Chip</string>
    <string name="actionchip">Action Chip</string>
    <string name="entrychip">Entry Chip</string>
    <string name="onclick">OnClick</string>
    <string name="checkedchange">Checked Change</string>
    <string name="oncloseicon">OnCloseIcon</string>
    <string name="dynamicchipgroup">Dynamic Chip Group</string>
    <string name="spacechip">Space Chip</string>
    <string name="singlechipselection">Single Chip Selection</string>
    <string name="multiplechipselection">Multiple Chip Selection</string>
    <string name="horizontalgroupchip">Horizontal GroupChip</string>
    <string name="inputfieldchip">Input Field Chip</string>
    <string name="getchiptext">Get Chip Text</string>
    <string name="chiptextcolor">Chip TextColor</string>
    <string name="deletechip">Delete Chip</string>
    <string name="bordercolor">Border Color</string>
    <string name="chipfontandtextsize">Chip Font And Textsize</string>
    <string name="badgedrawable">BadgeDrawable</string>
    <string name="badgenumber">Badge Number</string>
    <string name="user">User</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="square">Square</string>
    <string name="svgincanvas">Svg In Canvas</string>
    <string name="drawbitmap">Draw Bitmap</string>
    <string name="straightline">Straight Line</string>
    <string name="curveline">Curved Line</string>
    <string name="drawtext">Draw Text</string>
    <string name="shapeoutside">Shape Outside</string>
    <string name="centertext">Center Text</string>
    <string name="measuretext">Measure Text</string>
    <string name="drawcanvas">Draw Canvas</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale Canvas</string>
    <string name="canvastobitmap">Canvas To Bitmap</string>
    <string name="undocanvas">Undo Canvas</string>
    <string name="moveimage">Move Image</string>
    <string name="movetext">Move Text</string>
    <string name="drawcubic">Draw Cubic</string>
    <string name="piechart">Pie Chart</string>
    <string name="barchart">Bar Chart</string>
    <string name="horizontalbarchart">Horizontal Bar Chart</string>
    <string name="scatterchart">Scatter Chart</string>
    <string name="candlestickchart">CandleStick Chart</string>
    <string name="bubblechart">Bubble Chart</string>
    <string name="radarchart">Radar Chart</string>
    <string name="linechartanychart">Line Chart AnyChart</string>
    <string name="barchartanychart">Bar Chart AnyChart</string>
    <string name="piechartanychart">Pie Chart AnyChart</string>
    <string name="columnchartanychart">Column Chart AnyChart</string>
    <string name="venndiagramchartanychart">Venn Diagram Chart AnyChart</string>
    <string name="radarchartanychart">Radar Chart AnyChart</string>
    <string name="tagcloudchartanychart">Tag Cloud Chart AnyChart</string>
    <string name="waterfallchartanychart">Water Fall Chart AnyChart</string>
    <string name="scatterchartanychart">Scatter Chart AnyChart</string>
    <string name="rangechartanychart">Range Chart AnyChart</string>
    <string name="polarchartanychart">Polar Chart AnyChart</string>
    <string name="bubblechartanychart">Bubble Chart AnyChart</string>
    <string name="periodictask">Periodic Task</string>
    <string name="schedulework">Schedule Work</string>
    <string name="startworkbr">Start Work With BR</string>
    <string name="checkwork">Check Work</string>
    <string name="updateui">Update Ui</string>
    <string name="schedulenotification">Schedule Notification</string>
    <string name="workdata">Work Data</string>
    <string name="cancelwork">Cancel Work</string>
    <string name="sequentwork">Sequent Work</string>
    <string name="workupdateroomdb">Work Update Room db</string>
    <string name="reschedulework">ReSchedule Work</string>
    <string name="uploadimage">Upload Image</string>
    <string name="jobscheduler">Job Scheduler</string>
    <string name="immediatejob">Immediate Job</string>
    <string name="periodicjob">Periodic Job</string>
    <string name="notificationjob">Notification Job</string>
    <string name="settimer">Set Timer</string>
    <string name="countdowntimer">CountDown Timer</string>
    <string name="canceltimer">Cancel Timer</string>
    <string name="enableordisable">Enable or Disable Blu</string>
    <string name="implementbluetooth">Implement Bluetooth</string>
    <string name="bluetoothchat">Bluetooth Chat</string>
    <string name="sendfile">Send File</string>
    <string name="bluetoothdebug">Bluetooth Debug</string>
    <string name="bluetoothpairing">Bluetooth Pairing</string>
    <string name="serialdata">Serial Data</string>
    <string name="navcomponent">Nav Component</string>
    <string name="blepairing">Ble Pairing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbackstack">Nav BackStack</string>
    <string name="navbottom">Nav Bottom</string>
    <string name="navonbackpressed">Nav onBackPressed</string>
    <string name="navvisiblefragment">Nav Visible Fragment</string>
    <string name="navfinish">Nav Finish</string>
    <string name="saverestorestate">Save Restore State</string>
    <string name="argfragment">Arg Fragment</string>
    <string name="navdrawer">Nav Drawer</string>
    <string name="title_activity_map_and_service2">Map</string>
    <string name="custommarker">Custom Marker</string>
    <string name="zoomallmarker">Zoom All Marker</string>
    <string name="custominfowindow">Custom Info Window</string>
    <string name="onclickonlongpress">onClick onLongPress</string>
    <string name="currentlocation">Current Location</string>
    <string name="newmarker">New Marker</string>
    <string name="mapviewtype">Map ViewType</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="displayfirestore">Display Firestore</string>
    <string name="mapfragment">Map Fragment</string>
    <string name="locationservice">Location Service</string>
    <string name="locationupdate">Location Update</string>
    <string name="servicerunning">Service Running</string>
    <string name="intentservice">Intent Service</string>
    <string name="communicateservice">Communicate Service</string>
    <string name="startactivity">Start Activity</string>
    <string name="stopservice">Stop Service</string>
    <string name="brservice">Br Service</string>
    <string name="notification">Notification</string>
    <string name="bindservice">Bind Service</string>
    <string name="scanbarcode">Scan Barcode</string>
    <string name="recognizedtext">Recognized Text</string>
    <string name="facedetection">Face Detection</string>
    <string name="identifylandmark">Identify Landmark</string>
    <string name="labelimage">Label Image</string>
    <string name="twowaydatabinding">Two Way Data Binding</string>
    <string name="bindimageview">Bind ImageView</string>
    <string name="bindrecyclerview">Bind Recyclerview</string>
    <string name="bindclickevent">Bind ClickEvent</string>
    <string name="observablearraymap">ObservableArrayMap</string>
    <string name="observablefields">ObservableFields</string>
    <string name="observableclass">ObservableClass</string>
    <string name="baseobservable">BaseObservable</string>
    <string name="phonecall">Phone Call</string>
    <string name="sendemail">Send Email</string>
    <string name="sendemailprog">Send Email Prog</string>
    <string name="scanqrcode">Scan Qr Code</string>
    <string name="renderhtmltag">Render Html Tag</string>
    <string name="contactlist">Contact List</string>
    <string name="changelaunchericon">Change Launcher Icon</string>
    <string name="customtoast">Custom Toast</string>
    <string name="hexadecimalcolor">Hexadecimal Color</string>
    <string name="audiofromasset">Audio From Asset</string>
    <string name="defaultringtone">Default Ring Tone</string>
    <string name="vibratephone">Vibrate Phone</string>
    <string name="fingerprintauth">Fingerprint Auth</string>
    <string name="shakedetector">Shake Detector</string>
    <string name="proximitysensor">Proximity Sensor</string>
    <string name="gyroscopesensor">Gyroscope Sensor</string>
    <string name="firebasepushnoti">Firebase Push Noti</string>
    <string name="geofencing">Geofencing</string>
    <string name="startgeofence">Start Geofence</string>
    <string name="foregroundnoti">Foreground Noti</string>
</resources>
